--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,14 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/json-20250517.jar">
+	<classpathentry kind="src" path="lib"/>
+	<classpathentry excluding="src/|lib/" kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/eznix/eclipse-workspace/Chat_Program_Server/lib/json-20250517.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/eznix/OneDrive/문서/Downloads/mariadb-java-client-2.4.0.jar">
+	<classpathentry kind="lib" path="C:/Users/eznix/eclipse-workspace/Chat_Program_Server/lib/mariadb-java-client-2.4.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
